--- a/site-primeiraEntrega/instagram.html
+++ b/site-primeiraEntrega/instagram.html
@@ -21,6 +21,7 @@
                 </a>
             </ul>
         </nav>
+    </header>
         <main>
             <h1>O que é o instagram</h1>
             <img src="imagens/download.jpg" alt="">
