--- a/site-primeiraEntrega/instagram.html
+++ b/site-primeiraEntrega/instagram.html
@@ -13,7 +13,7 @@
         
         <nav>
             <ul>
-                <a href="index.html">
+                <a href="inicial.html">
                     <li>página inicial</li>
                 </a>
                 <a href="instagram.html">
