--- a/site-primeiraEntrega/contato.html
+++ b/site-primeiraEntrega/contato.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina inicial</title>
+    <title>Document</title>
 </head>
 <body>
     <header>
@@ -13,14 +13,21 @@
         
         <nav>
             <ul>
-                <a href="index.html">
+                <a href="inicial.html">
                     <li>página inicial</li>
                 </a>
-                <a href="instagram.html">
-                    <li>Como usar o instagram</li>
+                <a href="contato.html">
+                    <li>Contato</li>
                 </a>
             </ul>
         </nav>
     </header>
+    <h1>Deseja entrar em contato conosco?</h1>
+
+    <form action="cadastr.php">
+        E-mail:<input type="email" name="" id="" placeholder="Digite seu email aqui">
+        <input type="submit" value="enviar">
+
+    </form>
 </body>
 </html>
