--- a/site-primeiraEntrega/contato.html
+++ b/site-primeiraEntrega/contato.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <a href="inicial.html">
-                    <li>página inicial</li>
+                    <li>Página inicial</li>
                 </a>
                 <a href="contato.html">
                     <li>Contato</li>
