--- a/site-primeiraEntrega/instagram.html
+++ b/site-primeiraEntrega/instagram.html
@@ -14,7 +14,7 @@
         <nav>
             <ul>
                 <a href="inicial.html">
-                    <li>página inicial</li>
+                    <li>Página inicial</li>
                 </a>
                 <a href="instagram.html">
                     <li>Como usar o instagram</li>
