Adicionando aúdio e outras abas do site

--- a/site-primeiraEntrega/contato.html
+++ b/site-primeiraEntrega/contato.html
@@ -3,28 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="imagens/ico.ico" type="image/x-icon">
+    <title>Contato</title>
 </head>
 <body>
     <header>
         <div id="logo marca">
                 <a href="#"><img src="./imagens/WhatsApp Image 2024-03-08 at 00.42.06.jpeg" alt="logo marca" width="150px" height="100px"></a>
             </div>
-        
+            <h1>TechFácil</h1>
         <nav>
             <ul>
                 <a href="inicial.html">
-                    <li>Página inicial</li>
+                    <li>Página Inicial</li>
                 </a>
                 <a href="contato.html">
                     <li>Contato</li>
+                </a>
+
+                <a href="instagram.html"> 
+                    <li>Como usar o Instagram </li> 
+                    </a>
+                    <a href="uber.html">
+                <li>Como pedir Uber</li>
+                </a>
+                <a href="pix.html">
+                <li> Como usar o Pix</li>
                 </a>
             </ul>
         </nav>
     </header>
     <h1>Deseja entrar em contato conosco?</h1>
-
+    <h3>Digite algumas informações</h3>
     <form action="cadastr.php">
+        Nome:<input type="text" name="" id=""> <br>
+        Idade:<input type="text" name="" id=""><br>
         E-mail:<input type="email" name="" id="" placeholder="Digite seu email aqui">
         <input type="submit" value="enviar">
 
