--- a/site-primeiraEntrega/instagram.html
+++ b/site-primeiraEntrega/instagram.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/ico.ico" type="image/x-icon">
     <title>Como usar o instagram</title>
 </head>
 <body>
@@ -10,14 +11,24 @@
         <div id="logo marca">
                 <a href="#"><img src="./imagens/WhatsApp Image 2024-03-08 at 00.42.06.jpeg" alt="logo marca" width="150px" height="100px"></a>
             </div>
-        
+            <h1>TechFácil</h1>
         <nav>
             <ul>
                 <a href="inicial.html">
-                    <li>Página inicial</li>
+                    <li>Página Inicial</li>
                 </a>
-                <a href="instagram.html">
-                    <li>Como usar o instagram</li>
+                <a href="contato.html">
+                    <li>Contato</li>
+                </a>
+
+                <a href="instagram.html"> 
+                    <li>Como usar o Instagram </li> 
+                    </a>
+                    <a href="uber.html">
+                <li>Como pedir Uber</li>
+                </a>
+                <a href="pix.html">
+                <li> Como usar o Pix</li>
                 </a>
             </ul>
         </nav>
